ingress-1.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: public-ingress
spec:
  tls:
    - hosts:
      - yoconsumo.municipiodeoaxaca.gob.mx
      # This assumes tls-secret exists and the SSL
      # certificate contains a CN for foo.bar.com
      secretName: secure-tls
  rules:
    - host: yoconsumo.municipiodeoaxaca.gob.mx
      http:
        paths:
        - path: /
          backend:
            # This assumes http-svc exists and routes to healthy endpoints
            serviceName: web-cust-pr-service
            servicePort: 80
