ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: yoconsumo-ingress
spec:
  tls:
  - secretName: secure-tls
  rules:
  - host: yoconsumo.municipiodeoaxaca.gob.mx
    http:
      paths:
      - backend:
          serviceName: yoconsumo-ent-yc
          servicePort: 80
